Adds variables into templates

--- a/app/templates/demo/_index.html
+++ b/app/templates/demo/_index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Demo: Boilerplate</title>
+  <title>Demo: <%= capitalizeName %></title>
 
   <link rel="stylesheet" href="../build/bootstrap.css">
-  <link rel="stylesheet" href="../build/boilerplate.css">
+  <link rel="stylesheet" href="../build/<%= lowercaseName %>.css">
 
   <script src="../bower_components/soyutils/soyutils.js"></script>
-  <script src="../build/globals/boilerplate.js"></script>
+  <script src="../build/globals/<%= lowercaseName %>.js"></script>
 </head>
 <body>
-  <h1>Boilerplate</h1>
+  <h1><%= capitalizeName %></h1>
   <script type="text/javascript">
-    new metal.Boilerplate().render();
+    new aui.<%= capitalizeName %>().render();
   </script>
 </body>
 </html>
