--- a/app/templates/demos/_index.html
+++ b/app/templates/demos/_index.html
@@ -13,7 +13,7 @@
 <body>
 	<h1><%= capitalizeName %></h1>
 	<script type="text/javascript">
-		new aui.<%= capitalizeName %>().render();
+		new metal.<%= capitalizeName %>().render();
 	</script>
 </body>
 </html>
