Removes reference to "Modal" on amd demo file

--- a/app/templates/demos/_amd.html
+++ b/app/templates/demos/_amd.html
@@ -11,7 +11,7 @@
 	<script src="../bower_components/requirejs/require.js"></script>
 </head>
 <body>
-	<h1>Modal</h1>
+	<h1><%= capitalizeName %></h1>
 	<script type="text/javascript">
 		requirejs.config({
 	    baseUrl: '../build/amd'
