Fixes generated demo file for modules using amd build

--- a/app/templates/demos/_amd.html
+++ b/app/templates/demos/_amd.html
@@ -17,7 +17,7 @@
 	    baseUrl: '../build/amd'
 		});
 		requirejs(['<%= repoName %>/src/<%= capitalizeName %>'], function(<%= capitalizeName %>) {
-			new <%= capitalizeName %>().default.render();
+			new <%= capitalizeName %>.default().render();
 		});
 	</script>
 </body>
