Stops using the removed "render" function

--- a/app/templates/demos/_amd.html
+++ b/app/templates/demos/_amd.html
@@ -16,7 +16,7 @@
 	    baseUrl: '../build/amd'
 		});
 		requirejs(['<%= repoName %>/src/<%= capitalizeName %>'], function(<%= capitalizeName %>) {
-			new <%= capitalizeName %>.default().render();
+			new <%= capitalizeName %>.default();
 		});
 	</script>
 </body>
