--- a/app/templates/demos/_globals.html
+++ b/app/templates/demos/_globals.html
@@ -12,7 +12,7 @@
 <body>
 	<h1><%= capitalizeName %></h1>
 	<script type="text/javascript">
-		new metal.<%= capitalizeName %>().render();
+		new metal.<%= capitalizeName %>();
 	</script>
 </body>
 </html>
