--- a/app/templates/demos/_amd.html
+++ b/app/templates/demos/_amd.html
@@ -15,9 +15,9 @@
 
 	<script type="text/javascript">
 		requirejs.config({
-			baseUrl: '../../build/amd'
+			baseUrl: '../build/amd'
 		});
-		requirejs(['../../build/amd/<%= repoName %>/src/<%= capCaseName %>'], function(<%= capCaseName %>) {
+		requirejs(['<%= repoName %>/src/<%= capCaseName %>'], function(<%= capCaseName %>) {
 			new <%= capCaseName %>.default();
 		});
 	</script>
