--- a/app/templates/demos/_globals.html
+++ b/app/templates/demos/_globals.html
@@ -14,7 +14,7 @@
 	<h1><%= capitalizeName %></h1>
 
 	<script type="text/javascript">
-		new metal.<%= capCaseName %>();
+		new metal.<%= componentName %>();
 	</script>
 </body>
 </html>
