Fixes jQuery build format

--- a/app/templates/demos/_jquery.html
+++ b/app/templates/demos/_jquery.html
@@ -6,7 +6,6 @@
 	<title>Demo: <%= capitalizeName %></title>
 
 	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" href="../build/<%= kebabCaseName %>.css">
 
 	<script src="../node_modules/jquery/dist/jquery.js"></script>
 	<script src="../build/jquery/<%= kebabCaseName %>.js"></script>
@@ -17,7 +16,7 @@
 	<div id="<%= camelCaseName %>"></div>
 
 	<script type="text/javascript">
-		$('#<%= camelCaseName %>').<%= kebabCaseName %>();
+		$('#<%= camelCaseName %>').<%= componentName %>();
 	</script>
 </body>
 </html>
